--- a/assignments/3-frontend/index.html
+++ b/assignments/3-frontend/index.html
@@ -4,9 +4,11 @@
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
-        <h1 id="header1">ini adalah heading 1</h1>
-        <h2>ini adalah heading 2</h2>
-        <p>Ini adalah konten paragraf.</p>
+        <h1 id="header1">Tugas 3 : Fronted - HTML  1</h1>
+        <h2>Siti Nurhalisa : Ringkasan materi 100 kata </h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate tempora
+    provident quaerat officia maxime totam, repudiandae libero ducimus hic esse
+    ipsam quam cum voluptates enim laudantium fugit quis eum suscipit.</p>
     </body>
     <script type="text/javascript" src="script.js"></script>
 </html>
